@@ -38,6 +38,7 @@ func TestAllSpecs(t *testing.T) {
 
 	r.AddSpec(BufferedOutputSpec)
 	r.AddSpec(InputRunnerSpec)
+	r.AddSpec(MessageTemplateSpec)
 	r.AddSpec(OutputRunnerSpec)
 	r.AddSpec(ProtobufDecoderSpec)
 	r.AddSpec(ReportSpec)
