@@ -54,12 +54,19 @@ func (mt MessageTemplate) PopulateMessage(msg *message.Message, subs map[string]
 		case "Hostname":
 			msg.SetHostname(val)
 		case "Pid":
-			int_part := strings.Split(val, ".")[0]
-			pid, err := strconv.ParseInt(int_part, 10, 32)
+			intPart := strings.Split(val, ".")[0]
+			pid, err := strconv.ParseInt(intPart, 10, 32)
 			if err != nil {
 				return err
 			}
 			msg.SetPid(int32(pid))
+		case "Severity":
+			intPart := strings.Split(val, ".")[0]
+			severity, err := strconv.ParseInt(intPart, 10, 32)
+			if err != nil {
+				return err
+			}
+			msg.SetSeverity(int32(severity))
 		case "Uuid":
 			if len(val) == message.UUID_SIZE {
 				msg.SetUuid([]byte(val))
